--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.96MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇯🇵 日本-292.7KB/s(Youtube:不良林), server: 185.172.113.101, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32913, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: gb.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.29MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.21MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-882.6KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8060, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: 172.96.192.58, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.62MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-1.35MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-289.0KB/s(Youtube:不良林), server: 185.172.113.101, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇨🇦 加拿大-2.48MB/s(Youtube:不良林), server: 134.195.196.128, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-3.21MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.95MB/s(Youtube:不良林), server: 134.195.196.128, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇦 加拿大-1.51MB/s(Youtube:不良林), server: 134.195.196.128, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇦 加拿大-2.87MB/s(Youtube:不良林), server: 134.195.196.128, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇦 加拿大-1.44MB/s(Youtube:不良林), server: 134.195.196.128, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-1.83MB/s(Youtube:不良林), server: 134.195.196.128, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-882.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-289.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-882.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-289.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-882.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-289.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-882.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-289.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-882.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-289.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-882.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-289.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-292.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-882.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇯🇵 日本-289.0KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
