--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32913, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: gb.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-289.0KB/s(Youtube:不良林), server: 185.172.113.101, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇨🇦 加拿大-2.48MB/s(Youtube:不良林), server: 134.195.196.128, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-3.21MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.51MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.85MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.89MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-1.35MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-692.2KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
   - {name: 🇨🇦 加拿大-1.95MB/s(Youtube:不良林), server: 134.195.196.128, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇨🇦 加拿大-1.51MB/s(Youtube:不良林), server: 134.195.196.128, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇨🇦 加拿大-2.87MB/s(Youtube:不良林), server: 134.195.196.128, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-289.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-692.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-289.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-692.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-289.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-692.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
@@ -66,18 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-289.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-692.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-289.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-692.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-289.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-692.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇯🇵 日本-289.0KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活4天)香港-3.82MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-692.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
