--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.51MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.85MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.89MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-1.35MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-692.2KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
   - {name: 🇨🇦 加拿大-1.95MB/s(Youtube:不良林), server: 134.195.196.128, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇨🇦 加拿大-1.51MB/s(Youtube:不良林), server: 134.195.196.128, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇦 加拿大-2.87MB/s(Youtube:不良林), server: 134.195.196.128, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-1.44MB/s(Youtube:不良林), server: 134.195.196.128, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-1.83MB/s(Youtube:不良林), server: 134.195.196.128, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32913, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: gb.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.39MB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇫🇷 法国-1.23MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-3.40MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇦 加拿大-2.17MB/s(Youtube:不良林), server: 134.195.196.128, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 134.195.196.128, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.38MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-791.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇦 加拿大-737.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-692.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-791.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-737.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-692.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-791.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-737.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-692.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-791.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-737.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-692.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-791.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-737.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-692.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-791.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-737.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-692.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-791.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-737.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.89MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-692.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.87MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.44MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-791.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-737.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
