--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.95MB/s(Youtube:不良林), server: 134.195.196.128, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32913, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: gb.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.39MB/s(Youtube:不良林), server: 134.195.196.128, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇫🇷 法国-1.23MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-3.40MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇨🇦 加拿大-2.17MB/s(Youtube:不良林), server: 134.195.196.128, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: 134.195.196.128, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.38MB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-791.1KB/s(Youtube:不良林), server: 134.195.196.128, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇦 加拿大-737.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-4.01MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇯🇵 日本-266.4KB/s(Youtube:不良林), server: 185.172.113.101, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.30MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.34MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇦 加拿大-1.24MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: 97.64.31.80, port: 247, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇬🇧 英国-720.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-384.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇨🇦 加拿大-1.52MB/s(Youtube:不良林), server: 134.195.196.128, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-791.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-737.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-266.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-791.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-737.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-266.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-791.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-737.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-266.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.34MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-791.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-737.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-266.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-791.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-737.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-266.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-791.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-737.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-266.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.39MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-791.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-737.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.01MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-4.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-266.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇬🇧 英国-720.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-384.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
